add python-dotenv to config

--- a/docker-compose.debug.yml
+++ b/docker-compose.debug.yml
@@ -4,13 +4,13 @@ services:
     build:
       context: .
       dockerfile: ./Dockerfile
-    environment:
-      TZ: "${TZ}"
-      BOT_TOKEN: "${BOT_TOKEN}"
-      PYTHONPATH: "${PYTHONPATH}"
+    # environment:
+    #   TZ: "${TZ}"
+    #   BOT_TOKEN: "${BOT_TOKEN}"
+    #   PYTHONPATH: "${PYTHONPATH}"
     # либо просто
-    # env_file:
-    #   - .env
+    env_file:
+      - .env
     command: ["sh", "-c", "pip install debugpy -t /tmp && python /tmp/debugpy --wait-for-client --listen 0.0.0.0:5678 main.py "]
     ports:
       - 5678:5678
