--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,13 +5,13 @@ services:
     build:
       context: .
       dockerfile: ./Dockerfile
-    environment:
-      TZ: "${TZ}"
-      BOT_TOKEN: "${BOT_TOKEN}"
-      PYTHONPATH: "${PYTHONPATH}"
+    # environment:
+    #   TZ: "${TZ}"
+    #   BOT_TOKEN: "${BOT_TOKEN}"
+    #   PYTHONPATH: "${PYTHONPATH}"
     # либо просто
-    # env_file:
-    #   - .env
+    env_file:
+      - .env
     volumes:
       - ./data:/app/data
     restart: unless-stopped
