--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,12 +4,8 @@ services:
     build:
       context: .
       dockerfile: ./Dockerfile
-    environment:
-      BOT_TOKEN: "${BOT_TOKEN}"
-      AUTHORIZED_USER: "${AUTHORIZED_USER}"
-      # Указываем путь к файлу как переменную окружения, используемую в приложении
-      GOOGLE_APPLICATION_CREDENTIALS: "/app/google_credentials.json"
+    env_file:
+      - .env
     volumes:
       - ./data:/app/data
-      - ./google_credentials.json:/app/google_credentials.json  # Монтируем JSON-файл в контейнер
     restart: unless-stopped
