change build args link to env file

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -48,8 +48,8 @@ jobs:
             ghcr.io/${{ env.IMAGE_NAME }}:latest
           labels: |
             org.opencontainers.image.source=https://github.com/${{ github.repository }}
-          build-args:  # Передача build-args в правильном формате
-            ENV_FILE: .env
+          build-args: |
+            ENV_FILE=.env
 
       - name: Deploy with Docker Compose
         run: docker compose up -d
