--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -29,12 +29,6 @@ jobs:
         run: |
           echo "IMAGE_NAME=${GITHUB_REPOSITORY@L}" >> ${GITHUB_ENV}
       
-      - name: Create .env file from secrets
-        run: |
-          echo "BOT_TOKEN=${{ secrets.BOT_TOKEN }}" >> .env
-          echo "GOOGLE_CREDENTIALS=${{ secrets.GOOGLE_CREDENTIALS }}" >> .env
-          echo "AUTHORIZED_USER=${{ secrets.AUTHORIZED_USER }}" >> .env
-
       - name: Build and push Docker image
         uses: docker/build-push-action@v6
         with:
@@ -48,3 +42,10 @@ jobs:
             ghcr.io/${{ env.IMAGE_NAME }}:latest
           labels: |
             org.opencontainers.image.source=https://github.com/${{ github.repository }}
+
+      - name: Deploy with Docker Compose
+        env:
+          BOT_TOKEN: ${{ secrets.BOT_TOKEN }}
+          GOOGLE_CREDENTIALS: ${{ secrets.GOOGLE_CREDENTIALS }}
+          AUTHORIZED_USER: ${{ secrets.AUTHORIZED_USER }}
+        run: docker-compose up -d
