--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,10 @@
 services:
   pythontelegrambottemplate:
     image: ghcr.io/daniil-leshchev/google-sheets-expenses-bot
-    build:
-      context: .
-      dockerfile: ./Dockerfile
-    env_file:
-      - .env
+    environment:
+      - BOT_TOKEN=${BOT_TOKEN}
+      - GOOGLE_CREDENTIALS=${GOOGLE_CREDENTIALS}
+      - AUTHORIZED_USER=${AUTHORIZED_USER}
     volumes:
       - ./data:/app/data
     restart: unless-stopped
