--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -7,6 +7,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    environment: main-env
 
     steps:
       - name: Checkout
@@ -23,7 +24,7 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          password: ${{ github.token }}
 
       - name: Lowercase Repository Name
         run: |
@@ -54,11 +55,9 @@ jobs:
           echo "GOOGLE_CREDENTIALS: $GOOGLE_CREDENTIALS"
           echo "AUTHORIZED_USER: $AUTHORIZED_USER"
 
-      - name: Create .env file
-        run: |
-          echo "BOT_TOKEN=${{ secrets.BOT_TOKEN }}" >> .env
-          echo "GOOGLE_CREDENTIALS=${{ secrets.GOOGLE_CREDENTIALS }}" >> .env
-          echo "AUTHORIZED_USER=${{ secrets.AUTHORIZED_USER }}" >> .env
-
       - name: Deploy with Docker Compose
-        run: docker compose up -d
+        env:
+          BOT_TOKEN: ${{ secrets.BOT_TOKEN }}
+          GOOGLE_CREDENTIALS: ${{ secrets.GOOGLE_CREDENTIALS }}
+          AUTHORIZED_USER: ${{ secrets.AUTHORIZED_USER }}
+        run: BOT_TOKEN=$BOT_TOKEN GOOGLE_CREDENTIALS=$GOOGLE_CREDENTIALS AUTHORIZED_USER=$AUTHORIZED_USER docker compose up -d
