--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,5 @@
 services:
-  pythontelegrambottemplate:
+  expensesbot:
     image: ghcr.io/daniil-leshchev/expenses-bot
     environment:
       - BOT_TOKEN=${BOT_TOKEN}
