--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -55,9 +55,12 @@ jobs:
           echo "GOOGLE_CREDENTIALS: $GOOGLE_CREDENTIALS"
           echo "AUTHORIZED_USER: $AUTHORIZED_USER"
 
-      - name: Deploy with Docker Compose
-        env:
-          BOT_TOKEN: ${{ secrets.BOT_TOKEN }}
-          GOOGLE_CREDENTIALS: ${{ secrets.GOOGLE_CREDENTIALS }}
-          AUTHORIZED_USER: ${{ secrets.AUTHORIZED_USER }}
-        run: docker compose up -d
+      - name: Create .env file
+        run: |
+          echo "BOT_TOKEN=${{ secrets.BOT_TOKEN }}" >> .env
+          echo "GOOGLE_CREDENTIALS='${{ secrets.GOOGLE_CREDENTIALS }}'" >> .env
+          echo "AUTHORIZED_USER=${{ secrets.AUTHORIZED_USER }}" >> .env
+
+      # Проверка содержимого .env файла (для отладки)
+      - name: Display .env file content (for debugging)
+        run: cat .env
